<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/graph"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                >

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                />

            <LinearLayout
                android:id="@+id/options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                >

                <ImageButton
                    android:id="@+id/verySadButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_very_sad_40"
                    android:background="@android:color/transparent"
                    />

                <ImageButton
                    android:id="@+id/sadButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_sad_40"
                    android:background="@android:color/transparent"
                    />

                <ImageButton
                    android:id="@+id/neutralButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_neutral_40"
                    android:background="@android:color/transparent"
                    />

                <ImageButton
                    android:id="@+id/happyButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_happy_40"
                    android:background="@android:color/transparent"
                    />

                <ImageButton
                    android:id="@+id/veryHappyButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_very_happy_40"
                    android:background="@android:color/transparent"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/white"
                android:text="@string/button"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                />

            <GridLayout
                android:id="@+id/barGraphs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:columnCount="2"
                >

                <TextView
                    android:id="@+id/veryHappyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginRight="15dp"
                    android:text="@string/veryHappy"
                    />

                <View
                    android:id="@+id/veryHappyGraph"
                    android:layout_height="20dp"
                    android:layout_width="250dp"/>

                <TextView
                    android:id="@+id/happyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginRight="15dp"
                    android:text="@string/happy"
                    />

                <View
                    android:id="@+id/happyGraph"
                    android:layout_height="20dp"
                    android:layout_width="250dp"/>

                <TextView
                    android:id="@+id/neutralText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginRight="15dp"
                    android:text="@string/neutral"
                    />

                <View
                    android:id="@+id/neutralGraph"
                    android:layout_height="20dp"
                    android:layout_width="250dp"/>

                <TextView
                    android:id="@+id/SadText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginRight="15dp"
                    android:text="@string/sad"
                    />

                <View
                    android:id="@+id/sadGraph"
                    android:layout_height="20dp"
                    android:layout_width="250dp"/>

                <TextView
                    android:id="@+id/verySadText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginRight="15dp"
                    android:text="@string/verySad"
                    />

                <View
                    android:id="@+id/verySadGraph"
                    android:layout_height="20dp"
                    android:layout_width="250dp"/>

            </GridLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>